--- a/index.html
+++ b/index.html
@@ -1,101 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Modern Word Whiteboard PRO</title>
+<title>Offline Word Style Editor</title>
 
 <style>
-
-:root{
-  --bg:#f3f4f6;
-  --card:#ffffff;
-}
-
 body{
-  margin:0;
-  font-family:system-ui,Segoe UI,Arial;
-  background:var(--bg);
+ margin:0;
+ font-family:system-ui,Arial;
+ background:#f3f4f6;
 }
 
-/* ===== TOOLBAR ===== */
 .toolbar{
-  position:sticky;
-  top:0;
-  background:#fff;
-  display:flex;
-  flex-wrap:wrap;
-  gap:6px;
-  padding:10px;
-  box-shadow:0 2px 10px rgba(0,0,0,.08);
-  z-index:999;
+ position:sticky;
+ top:0;
+ background:#fff;
+ padding:10px;
+ display:flex;
+ flex-wrap:wrap;
+ gap:6px;
+ box-shadow:0 2px 10px rgba(0,0,0,.1);
 }
 
-button,select,input[type=color]{
-  border:0;
-  padding:7px 10px;
-  border-radius:8px;
-  background:#eef2ff;
-  cursor:pointer;
+button,input[type=color]{
+ border:0;
+ padding:7px 10px;
+ border-radius:8px;
+ background:#eef2ff;
+ cursor:pointer;
 }
 
 .wrapper{
-  display:flex;
-  justify-content:center;
-  padding:15px;
+ display:flex;
+ justify-content:center;
+ padding:15px;
 }
 
 .page{
-  background:white;
-  width:794px;
-  min-height:1123px;
-  padding:40px;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
-  outline:none;
-  transition:.2s;
+ background:#fff;
+ width:794px;
+ min-height:1123px;
+ padding:40px;
+ outline:none;
+ box-shadow:0 10px 25px rgba(0,0,0,.15);
 }
 
 .landscape{
-  width:1123px;
-  min-height:794px;
+ width:1123px;
+ min-height:794px;
 }
 
 table{
-  width:100%;
-  border-collapse:collapse;
+ border-collapse:collapse;
+ width:100%;
 }
 td,th{
-  border:1px solid #000;
-  padding:6px;
+ border:1px solid #000;
+ padding:6px;
 }
 
-/* MOBILE */
 @media(max-width:900px){
-  .page{
-    width:100%;
-    min-height:90vh;
-    padding:20px;
-    box-shadow:none;
-  }
+ .page{
+   width:100%;
+   min-height:90vh;
+   padding:20px;
+   box-shadow:none;
+ }
 }
 
-/* PRINT A4 */
 @media print{
-.toolbar{display:none;}
-.page{
-  width:210mm;
-  min-height:297mm;
-  padding:20mm;
-  box-shadow:none;
+ .toolbar{display:none;}
+ .page{
+   width:210mm;
+   min-height:297mm;
+   padding:20mm;
+   box-shadow:none;
+ }
+ .landscape{
+   width:297mm;
+   min-height:210mm;
+ }
 }
-.landscape{
-  width:297mm;
-  min-height:210mm;
-}
-}
-
 </style>
 </head>
+
 <body>
 
 <div class="toolbar">
@@ -104,28 +93,27 @@ td,th{
 <button onclick="cmd('italic')">I</button>
 <button onclick="cmd('underline')">U</button>
 
-<select onchange="fontSize(this.value)">
-<option value="">Font Size</option>
-<option value="1">10</option>
-<option value="3">14</option>
-<option value="5">18</option>
-<option value="7">24</option>
-</select>
-
 <input type="color" onchange="cmd('foreColor',this.value)">
 <input type="color" onchange="cmd('hiliteColor',this.value)">
 
 <button onclick="insertTable()">Table</button>
-<button onclick="toggleOrientation()">Portrait / Landscape</button>
-<button onclick="saveData()">Save</button>
+<button onclick="toggleOrientation()">Portrait/Landscape</button>
+
+<button onclick="saveFile()">💾 Save File</button>
+
+<label style="background:#eef2ff;padding:7px 10px;border-radius:8px;cursor:pointer;">
+📂 Open
+<input type="file" id="openFile" hidden>
+</label>
+
 <button onclick="window.print()">Print</button>
 
 </div>
 
 <div class="wrapper">
 <div id="editor" class="page" contenteditable="true">
-<h2>Modern Editor PRO</h2>
-<p>Keyboard shortcuts like Word are enabled.</p>
+<h2>Offline Word Editor</h2>
+<p>CTRL+S saves real file. SHIFT+F3 works.</p>
 </div>
 </div>
 
@@ -136,11 +124,6 @@ const editor=document.getElementById("editor");
 /* BASIC COMMAND */
 function cmd(c,v=null){
  document.execCommand(c,false,v);
-}
-
-/* FONT SIZE */
-function fontSize(size){
- document.execCommand("fontSize",false,size);
 }
 
 /* TABLE */
@@ -165,32 +148,57 @@ function insertTable(){
 /* ORIENTATION */
 function toggleOrientation(){
  editor.classList.toggle("landscape");
- saveData();
 }
 
-/* SAVE */
-function saveData(){
- localStorage.setItem("modernEditor",editor.innerHTML);
- localStorage.setItem("orientation",editor.classList.contains("landscape"));
+/* ===== REAL FILE SAVE (OFFLINE LIKE WORD) ===== */
+function saveFile(){
+
+ const fullHTML=`
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Saved Document</title>
+</head>
+<body>
+${editor.outerHTML}
+</body>
+</html>`;
+
+ const blob=new Blob([fullHTML],{type:"text/html"});
+ const a=document.createElement("a");
+ a.href=URL.createObjectURL(blob);
+ a.download="MyDocument.html";
+ a.click();
 }
 
-/* LOAD */
-function loadData(){
- const data=localStorage.getItem("modernEditor");
- const orient=localStorage.getItem("orientation");
+/* ===== OPEN SAVED FILE ===== */
+document.getElementById("openFile").addEventListener("change",function(e){
 
- if(data) editor.innerHTML=data;
- if(orient==="true") editor.classList.add("landscape");
-}
+ const file=e.target.files[0];
+ if(!file) return;
 
-window.onload=loadData;
+ const reader=new FileReader();
 
-/* AUTO SAVE */
-editor.addEventListener("input",saveData);
+ reader.onload=function(event){
+
+   const parser=new DOMParser();
+   const doc=parser.parseFromString(event.target.result,"text/html");
+   const loaded=doc.querySelector(".page");
+
+   if(loaded){
+     editor.innerHTML=loaded.innerHTML;
+   }
+
+ };
+
+ reader.readAsText(file);
+});
 
 /* ===== PASTE IMAGE ===== */
 editor.addEventListener("paste",function(e){
  const items=(e.clipboardData||window.clipboardData).items;
+
  for(let i=0;i<items.length;i++){
   if(items[i].type.indexOf("image")!==-1){
     e.preventDefault();
@@ -204,62 +212,51 @@ editor.addEventListener("paste",function(e){
  }
 });
 
-/* ===== KEYBOARD SHORTCUTS LIKE WORD ===== */
-
+/* ===== KEYBOARD SHORTCUTS ===== */
 document.addEventListener("keydown",function(e){
 
-/* CTRL SHORTCUTS */
-if(e.ctrlKey){
+ if(e.ctrlKey){
 
- if(e.key==="b"){ e.preventDefault(); cmd("bold"); }
- if(e.key==="i"){ e.preventDefault(); cmd("italic"); }
- if(e.key==="u"){ e.preventDefault(); cmd("underline"); }
+  if(e.key==="b"){e.preventDefault();cmd("bold");}
+  if(e.key==="i"){e.preventDefault();cmd("italic");}
+  if(e.key==="u"){e.preventDefault();cmd("underline");}
+  if(e.key==="p"){e.preventDefault();window.print();}
 
- if(e.key==="s"){ e.preventDefault(); saveData(); alert("Saved!"); }
- if(e.key==="p"){ e.preventDefault(); window.print(); }
+  /* CTRL+S REAL SAVE */
+  if(e.key==="s"){
+   e.preventDefault();
+   saveFile();
+  }
+ }
 
- if(e.key==="l"){ e.preventDefault(); cmd("justifyLeft"); }
- if(e.key==="e"){ e.preventDefault(); cmd("justifyCenter"); }
- if(e.key==="r"){ e.preventDefault(); cmd("justifyRight"); }
- if(e.key==="j"){ e.preventDefault(); cmd("justifyFull"); }
-
-}
-
-/* CTRL + SHIFT FONT SIZE */
-if(e.ctrlKey && e.shiftKey){
- if(e.key===">"){ e.preventDefault(); cmd("increaseFontSize"); }
- if(e.key==="<"){ e.preventDefault(); cmd("decreaseFontSize"); }
-}
-
-/* ===== SHIFT + F3 TOGGLE CASE ===== */
-if(e.shiftKey && e.key==="F3"){
- e.preventDefault();
- toggleCase();
-}
+ /* SHIFT+F3 CASE CHANGE */
+ if(e.shiftKey && e.key==="F3"){
+  e.preventDefault();
+  toggleCase();
+ }
 
 });
 
-/* SHIFT+F3 FUNCTION */
 function toggleCase(){
 
  let sel=window.getSelection();
- if(!sel.rangeCount) return;
+ if(!sel.rangeCount)return;
 
  let range=sel.getRangeAt(0);
  let text=range.toString();
- if(!text) return;
+ if(!text)return;
 
  let newText;
 
  if(text===text.toUpperCase()){
    newText=text.toLowerCase();
-}else if(text===text.toLowerCase()){
+ }else if(text===text.toLowerCase()){
    newText=text.replace(/\b\w/g,l=>l.toUpperCase());
-}else{
+ }else{
    newText=text.toUpperCase();
-}
+ }
 
-document.execCommand("insertText",false,newText);
+ document.execCommand("insertText",false,newText);
 }
 
 </script>
