--- a/index.html
+++ b/index.html
@@ -1,264 +1,358 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Offline Word Style Editor</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pro Docs Editor | Offline</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+
+<script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 <style>
-body{
- margin:0;
- font-family:system-ui,Arial;
- background:#f3f4f6;
+:root {
+  --primary: #2563eb;       /* Royal Blue */
+  --bg-color: #f3f4f6;      /* Light Grey */
+  --surface: #ffffff;       /* White */
+  --text-main: #1f2937;     /* Dark Grey */
+  --border: #e5e7eb;
 }
 
-.toolbar{
- position:sticky;
- top:0;
- background:#fff;
- padding:10px;
- display:flex;
- flex-wrap:wrap;
- gap:6px;
- box-shadow:0 2px 10px rgba(0,0,0,.1);
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background: var(--bg-color);
+  color: var(--text-main);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
-button,input[type=color]{
- border:0;
- padding:7px 10px;
- border-radius:8px;
- background:#eef2ff;
- cursor:pointer;
+/* ===== HEADER (Date & Title) ===== */
+header {
+  background: var(--surface);
+  border-bottom: 1px solid var(--border);
+  padding: 0 20px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  z-index: 1000;
 }
 
-.wrapper{
- display:flex;
- justify-content:center;
- padding:15px;
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--primary);
 }
 
-.page{
- background:#fff;
- width:794px;
- min-height:1123px;
- padding:40px;
- outline:none;
- box-shadow:0 10px 25px rgba(0,0,0,.15);
+.datetime-display {
+  font-size: 14px;
+  color: #6b7280;
+  background: #f9fafb;
+  padding: 6px 12px;
+  border-radius: 20px;
+  border: 1px solid var(--border);
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
 
-.landscape{
- width:1123px;
- min-height:794px;
+/* ===== TOOLBAR ===== */
+.toolbar {
+  background: var(--surface);
+  padding: 10px 20px;
+  border-bottom: 1px solid var(--border);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-table{
- border-collapse:collapse;
- width:100%;
+.tool-group {
+  display: flex;
+  gap: 4px;
+  padding-right: 10px;
+  border-right: 1px solid var(--border);
+  align-items: center;
 }
-td,th{
- border:1px solid #000;
- padding:6px;
+.tool-group:last-child { border-right: none; }
+
+button {
+  border: none;
+  background: transparent;
+  padding: 8px;
+  border-radius: 6px;
+  cursor: pointer;
+  color: #4b5563;
+  transition: all 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@media(max-width:900px){
- .page{
-   width:100%;
-   min-height:90vh;
-   padding:20px;
-   box-shadow:none;
- }
+button:hover {
+  background: #eff6ff;
+  color: var(--primary);
 }
 
-@media print{
- .toolbar{display:none;}
- .page{
-   width:210mm;
-   min-height:297mm;
-   padding:20mm;
-   box-shadow:none;
- }
- .landscape{
-   width:297mm;
-   min-height:210mm;
- }
+button span.material-icons-round {
+  font-size: 20px;
+}
+
+/* Custom inputs (Color/File) */
+.color-picker-wrapper {
+  position: relative;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px solid var(--border);
+  cursor: pointer;
+}
+input[type="color"] {
+  position: absolute;
+  top: -50%; left: -50%;
+  width: 200%; height: 200%;
+  padding: 0; margin: 0;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-label {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 13px;
+  font-weight: 500;
+  padding: 8px 12px;
+  background: #eff6ff;
+  color: var(--primary);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.btn-label:hover { background: #dbeafe; }
+
+/* ===== EDITOR AREA ===== */
+.workspace {
+  flex: 1;
+  overflow-y: auto;
+  padding: 40px 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.page {
+  background: white;
+  width: 210mm; /* A4 Standard */
+  min-height: 297mm;
+  padding: 25mm;
+  box-sizing: border-box;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  outline: none;
+  transition: width 0.3s;
+}
+
+.page.landscape {
+  width: 297mm;
+  min-height: 210mm;
+}
+
+/* Content Styling */
+h1, h2, h3 { margin-top: 0; }
+table { border-collapse: collapse; width: 100%; margin: 15px 0; }
+td, th { border: 1px solid #d1d5db; padding: 8px; text-align: left; }
+th { background: #f3f4f6; }
+img { max-width: 100%; height: auto; }
+
+/* ===== MOBILE ===== */
+@media(max-width: 768px) {
+  .page { width: 100%; padding: 20px; min-height: 80vh; }
+  header { flex-direction: column; height: auto; padding: 10px; gap: 10px; }
+  .toolbar { gap: 5px; overflow-x: auto; padding: 10px; }
+}
+
+/* ===== PRINT ===== */
+@media print {
+  header, .toolbar { display: none; }
+  .workspace { padding: 0; display: block; }
+  .page { box-shadow: none; margin: 0; width: 100%; }
 }
 </style>
 </head>
 
 <body>
 
+<header>
+  <div class="brand">
+    <span class="material-icons-round">description</span>
+    DocuEditor <span style="font-weight:300; font-size:14px; color:#666;">Pro</span>
+  </div>
+  <div class="datetime-display" id="clock">
+    <span class="material-icons-round" style="font-size:16px;">schedule</span>
+    <span id="date-text">Loading...</span>
+  </div>
+</header>
+
 <div class="toolbar">
+  
+  <div class="tool-group">
+    <button onclick="saveFile()" title="Save as HTML">
+      <span class="material-icons-round">save</span>
+    </button>
+    <button onclick="window.print()" title="Print">
+      <span class="material-icons-round">print</span>
+    </button>
+  </div>
 
-<button onclick="cmd('bold')">B</button>
-<button onclick="cmd('italic')">I</button>
-<button onclick="cmd('underline')">U</button>
+  <div class="tool-group">
+    <button onclick="cmd('bold')" title="Bold">
+      <span class="material-icons-round">format_bold</span>
+    </button>
+    <button onclick="cmd('italic')" title="Italic">
+      <span class="material-icons-round">format_italic</span>
+    </button>
+    <button onclick="cmd('underline')" title="Underline">
+      <span class="material-icons-round">format_underlined</span>
+    </button>
+  </div>
 
-<input type="color" onchange="cmd('foreColor',this.value)">
-<input type="color" onchange="cmd('hiliteColor',this.value)">
+  <div class="tool-group">
+    <div class="color-picker-wrapper" title="Text Color">
+      <input type="color" onchange="cmd('foreColor',this.value)" value="#000000">
+    </div>
+    <div class="color-picker-wrapper" title="Highlight Color" style="background:#ffff00">
+      <input type="color" onchange="cmd('hiliteColor',this.value)" value="#ffff00">
+    </div>
+  </div>
 
-<button onclick="insertTable()">Table</button>
-<button onclick="toggleOrientation()">Portrait/Landscape</button>
+  <div class="tool-group">
+    <button onclick="toggleOrientation()" title="Portrait/Landscape">
+      <span class="material-icons-round">crop_rotate</span>
+    </button>
+  </div>
 
-<button onclick="saveFile()">💾 Save File</button>
-
-<label style="background:#eef2ff;padding:7px 10px;border-radius:8px;cursor:pointer;">
-📂 Open
-<input type="file" id="openFile" hidden>
-</label>
-
-<button onclick="window.print()">Print</button>
+  <div class="tool-group" style="border:none;">
+    <label class="btn-label">
+      <span class="material-icons-round">upload_file</span> Word
+      <input type="file" id="wordFile" hidden accept=".docx">
+    </label>
+    <label class="btn-label" style="background:#ecfdf5; color:#059669;">
+      <span class="material-icons-round">table_view</span> Excel
+      <input type="file" id="excelFile" hidden accept=".xlsx">
+    </label>
+  </div>
 
 </div>
 
-<div class="wrapper">
-<div id="editor" class="page" contenteditable="true">
-<h2>Offline Word Editor</h2>
-<p>CTRL+S saves real file. SHIFT+F3 works.</p>
-</div>
+<div class="workspace">
+  <div id="editor" class="page" contenteditable="true">
+    <h1 style="color:#2563eb;">Document Title</h1>
+    <p>Start typing here or upload a <b>Word</b> or <b>Excel</b> file to edit.</p>
+    <p><i>The time above updates automatically.</i></p>
+  </div>
 </div>
 
 <script>
+/* ===== CLOCK FUNCTION (NEW) ===== */
+function updateClock() {
+  const now = new Date();
+  const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+  const dateStr = now.toLocaleDateString('en-US', options);
+  const timeStr = now.toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit' });
+  
+  document.getElementById('date-text').innerText = `${dateStr} • ${timeStr}`;
+}
+setInterval(updateClock, 1000); // Update every second
+updateClock(); // Run immediately
 
-const editor=document.getElementById("editor");
+/* ===== EDITOR FUNCTIONS ===== */
+const editor = document.getElementById("editor");
 
-/* BASIC COMMAND */
-function cmd(c,v=null){
- document.execCommand(c,false,v);
+function cmd(command, value = null) {
+  document.execCommand(command, false, value);
+  editor.focus();
 }
 
-/* TABLE */
-function insertTable(){
- let r=prompt("Rows?");
- let c=prompt("Columns?");
- if(!r||!c)return;
-
- let html="<table>";
- for(let i=0;i<r;i++){
-  html+="<tr>";
-  for(let j=0;j<c;j++){
-    html+="<td>Text</td>";
-  }
-  html+="</tr>";
- }
- html+="</table>";
-
- document.execCommand("insertHTML",false,html);
+function toggleOrientation() {
+  editor.classList.toggle("landscape");
 }
 
-/* ORIENTATION */
-function toggleOrientation(){
- editor.classList.toggle("landscape");
+function saveFile() {
+  const fullHTML = `<!DOCTYPE html>
+  <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Saved Document</title>
+    <style>
+      body{font-family:Arial, sans-serif; padding:40px;}
+      table{border-collapse:collapse;width:100%;}
+      td,th{border:1px solid #000;padding:6px;}
+    </style>
+  </head>
+  <body>
+    ${editor.innerHTML}
+  </body>
+  </html>`;
+
+  const blob = new Blob([fullHTML], { type: "text/html" });
+  const a = document.createElement("a");
+  a.href = URL.createObjectURL(blob);
+  a.download = `Doc_${new Date().toISOString().slice(0,10)}.html`;
+  a.click();
 }
 
-/* ===== REAL FILE SAVE (OFFLINE LIKE WORD) ===== */
-function saveFile(){
+/* ===== IMPORT WORD (.docx) ===== */
+document.getElementById("wordFile").addEventListener("change", function(e) {
+  const file = e.target.files[0];
+  if (!file) return;
 
- const fullHTML=`
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Saved Document</title>
-</head>
-<body>
-${editor.outerHTML}
-</body>
-</html>`;
-
- const blob=new Blob([fullHTML],{type:"text/html"});
- const a=document.createElement("a");
- a.href=URL.createObjectURL(blob);
- a.download="MyDocument.html";
- a.click();
-}
-
-/* ===== OPEN SAVED FILE ===== */
-document.getElementById("openFile").addEventListener("change",function(e){
-
- const file=e.target.files[0];
- if(!file) return;
-
- const reader=new FileReader();
-
- reader.onload=function(event){
-
-   const parser=new DOMParser();
-   const doc=parser.parseFromString(event.target.result,"text/html");
-   const loaded=doc.querySelector(".page");
-
-   if(loaded){
-     editor.innerHTML=loaded.innerHTML;
-   }
-
- };
-
- reader.readAsText(file);
+  const reader = new FileReader();
+  reader.onload = function(event) {
+    mammoth.convertToHtml({ arrayBuffer: event.target.result })
+      .then(function(result) {
+        editor.innerHTML = result.value; // Replace content
+      })
+      .catch(function(err) { console.error(err); });
+  };
+  reader.readAsArrayBuffer(file);
 });
 
-/* ===== PASTE IMAGE ===== */
-editor.addEventListener("paste",function(e){
- const items=(e.clipboardData||window.clipboardData).items;
+/* ===== IMPORT EXCEL (.xlsx) ===== */
+document.getElementById("excelFile").addEventListener("change", function(e) {
+  const file = e.target.files[0];
+  if (!file) return;
 
- for(let i=0;i<items.length;i++){
-  if(items[i].type.indexOf("image")!==-1){
-    e.preventDefault();
-    const blob=items[i].getAsFile();
-    const reader=new FileReader();
-    reader.onload=function(event){
-      document.execCommand("insertImage",false,event.target.result);
-    };
-    reader.readAsDataURL(blob);
-  }
- }
+  const reader = new FileReader();
+  reader.onload = function(evt) {
+    const data = new Uint8Array(evt.target.result);
+    const workbook = XLSX.read(data, { type: 'array' });
+    const sheet = workbook.Sheets[workbook.SheetNames[0]];
+    const html = XLSX.utils.sheet_to_html(sheet);
+    editor.innerHTML = html; // Replace content
+  };
+  reader.readAsArrayBuffer(file);
 });
 
-/* ===== KEYBOARD SHORTCUTS ===== */
-document.addEventListener("keydown",function(e){
-
- if(e.ctrlKey){
-
-  if(e.key==="b"){e.preventDefault();cmd("bold");}
-  if(e.key==="i"){e.preventDefault();cmd("italic");}
-  if(e.key==="u"){e.preventDefault();cmd("underline");}
-  if(e.key==="p"){e.preventDefault();window.print();}
-
-  /* CTRL+S REAL SAVE */
-  if(e.key==="s"){
-   e.preventDefault();
-   saveFile();
+/* ===== SHORTCUTS ===== */
+document.addEventListener("keydown", function(e) {
+  if (e.ctrlKey) {
+    if (e.key === "b") { e.preventDefault(); cmd("bold"); }
+    if (e.key === "i") { e.preventDefault(); cmd("italic"); }
+    if (e.key === "u") { e.preventDefault(); cmd("underline"); }
+    if (e.key === "s") { e.preventDefault(); saveFile(); }
   }
- }
-
- /* SHIFT+F3 CASE CHANGE */
- if(e.shiftKey && e.key==="F3"){
-  e.preventDefault();
-  toggleCase();
- }
-
 });
-
-function toggleCase(){
-
- let sel=window.getSelection();
- if(!sel.rangeCount)return;
-
- let range=sel.getRangeAt(0);
- let text=range.toString();
- if(!text)return;
-
- let newText;
-
- if(text===text.toUpperCase()){
-   newText=text.toLowerCase();
- }else if(text===text.toLowerCase()){
-   newText=text.replace(/\b\w/g,l=>l.toUpperCase());
- }else{
-   newText=text.toUpperCase();
- }
-
- document.execCommand("insertText",false,newText);
-}
-
 </script>
 
 </body>
