--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ input[type="color"] {
 .page td, .page th { border: 1px solid #d1d5db; padding: 8px; text-align: left; vertical-align: top; }
 .page th { background: #f3f4f6; font-weight: 600; }
 .page img { max-width: 100%; height: auto; display: block; margin: 10px 0; }
+.page ul, .page ol { margin-bottom: 1em; padding-left: 20px; } /* List styling */
 
 /* ===== MOBILE ===== */
 @media(max-width: 768px) {
@@ -264,6 +265,27 @@ input[type="color"] {
   </button>
   <button onclick="toggleCase()" title="Change Case (Shift+F3)">
     <span class="material-icons-round">text_fields</span>
+  </button>
+
+  <div class="separator"></div>
+
+  <button onclick="cmd('justifyLeft')" title="Align Left">
+    <span class="material-icons-round">format_align_left</span>
+  </button>
+  <button onclick="cmd('justifyCenter')" title="Align Center">
+    <span class="material-icons-round">format_align_center</span>
+  </button>
+  <button onclick="cmd('justifyRight')" title="Align Right">
+    <span class="material-icons-round">format_align_right</span>
+  </button>
+
+  <div class="separator"></div>
+
+  <button onclick="cmd('insertUnorderedList')" title="Bullet List">
+    <span class="material-icons-round">format_list_bulleted</span>
+  </button>
+  <button onclick="cmd('insertOrderedList')" title="Numbered List">
+    <span class="material-icons-round">format_list_numbered</span>
   </button>
 
   <div class="separator"></div>
@@ -353,6 +375,7 @@ function saveFile() {
       table{ border-collapse: collapse; width: 100%; margin: 15px 0; }
       td, th{ border: 1px solid #000; padding: 6px; }
       img { max-width: 100%; }
+      ul, ol { padding-left: 20px; }
     </style>
   </head>
   <body>
